crates/strider/tests/snapshots/aarch64be__control__nested_loops.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v5" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v5" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "32" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="φ Mem", shape=house, fillcolor="#163030"];
  "39" -> "32" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "40" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "8" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "44" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="φ Val", shape=house, fillcolor="#163030"];
  "39" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v50" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v50" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v4" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "51" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "51" -> "v50" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "51" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "39" -> "51" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "52" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="φ Val", shape=house, fillcolor="#163030"];
  "39" -> "53" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="φ Val", shape=house, fillcolor="#163030"];
  "39" -> "63" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "46" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "6" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "6" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "6" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "67" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "65" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "69" -> "65" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
